[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/scripts/Player/CharaDoll.gd" type="Script" id=1]
[ext_resource path="res://res/sprites/UI/Stats.png" type="Texture" id=2]
[ext_resource path="res://scenes/scripts/Objects/DollSlot.gd" type="Script" id=3]
[ext_resource path="res://res/sprites/UI/bag-info-panel.png" type="Texture" id=4]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=5]

[node name="CharaDoll" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Doll" type="TextureRect" parent="."]
margin_left = 700.0
margin_top = 120.0
margin_right = 990.0
margin_bottom = 420.0
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="RightHandSlot" type="Control" parent="Doll"]
margin_left = 57.9573
margin_top = 150.403
margin_right = 97.9573
margin_bottom = 190.403
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftHandSlot" type="Control" parent="Doll"]
margin_left = 180.482
margin_top = 151.338
margin_right = 220.482
margin_bottom = 191.338
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HeadSlot" type="Control" parent="Doll"]
margin_left = 122.493
margin_top = 50.3251
margin_right = 162.493
margin_bottom = 90.3251
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RingSlot1" type="Control" parent="Doll"]
margin_left = 55.1514
margin_top = 75.5784
margin_right = 95.1514
margin_bottom = 115.578
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RingSlot2" type="Control" parent="Doll"]
margin_left = 185.159
margin_top = 75.5784
margin_right = 225.159
margin_bottom = 115.578
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftFeetSlot" type="Control" parent="Doll"]
margin_left = 165.517
margin_top = 220.55
margin_right = 205.517
margin_bottom = 260.55
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightFeetSlot" type="Control" parent="Doll"]
margin_left = 72.9221
margin_top = 220.551
margin_right = 112.922
margin_bottom = 260.551
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="InfoPanel" type="TextureRect" parent="."]
margin_left = 690.0
margin_top = 441.371
margin_right = 1008.0
margin_bottom = 680.371
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerName" type="Label" parent="InfoPanel"]
margin_left = 50.0
margin_top = 49.0
margin_right = 400.0
margin_bottom = 95.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 5 )
text = "PlayerName"
align = 1

[node name="HP" type="Label" parent="InfoPanel"]
margin_left = 50.0
margin_top = 99.0
margin_right = 400.0
margin_bottom = 145.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 5 )
text = "150/150 HP"
align = 1

[node name="Title" type="Label" parent="."]
margin_left = 790.0
margin_top = 70.0
margin_right = 881.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
text = "Stats"
__meta__ = {
"_edit_lock_": true
}
